crates/manifest/tests/ui/invalid/empty.err
TOML parse error at line 1, column 1
  |
1 | 
  | ^
missing field `spin_manifest_version`
